--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -7,16 +7,10 @@ a {
   color: #00B7FF;
 }
 
-.happy {
-  -webkit-filter: saturate(2);
-}
-
-.sad {
-  -webkit-filter: sepia(40%);
-}
-
-.scared {
-  -webkit-filter: grayscale(100%);
+.response {
+  border: 3px solid red;
+  width: 120px;
+  height: 100px;
 }
 
 #webcam_stream{
