--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -5,14 +5,10 @@ body {
 a {
   color: #00B7FF;
 }
-.happy {
-  -webkit-filter: saturate(2);
-}
-.sad {
-  -webkit-filter: sepia(40%);
-}
-.scared {
-  -webkit-filter: grayscale(100%);
+.response {
+  border: 3px solid red;
+  width: 120px;
+  height: 100px;
 }
 #webcam_stream {
   position: absolute;
