--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,6 +4,19 @@
   <div id="conversation"></div>
   <div id="submission">
     <input type="text" placeholder="say something..">
+    <table id="emoji_table"border="1">
+  		<tr>
+    		<td> <button type="button" id="smiley"> :) </button> </td>
+    		<td> <button type="button" id="smiley_nose"> :-) </button> </td>
+  		</tr>
+  		<tr>
+    		<td> <button type="button" id="sad"> :( </button> </td>
+    		<td> <button type="button" id="sad_nose"> :-( </button> </td>
+  		</tr>
+      <tr>
+        <td id="sendrep_td"> <button type="button" id="sendrep"> Send Repliable Video! </button> </td>
+      </tr>
+	</table>
   </div>
   <div id="webcam_stream"></div>
   <div id="video_container"></div>
